[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pygooglecloud"
version = "0.0.3"
requires-python = ">=3.12"
authors = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
maintainers = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
description = "pygooglecloud helps you with command line interaction with gcp"
readme = "README.md"
license = "MIT"
keywords=[
    "gcp",
    "gae",
    "python",
    "shell",
    "utilities",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pylogconf",
    "pytconf",
    "google-auth",
]

[project.urls]
"Homepage" = "https://github.com/veltzer/pygooglecloud"
"Bug Tracker" = "https://github.com/veltzer/pygooglecloud/issues"
"Documentation" = "https://veltzer.github.io/pygooglecloud"
"Download" = "https://pypi.org/project/pygooglecloud/"
"Repository" = "https://github.com/veltzer/pygooglecloud"

[project.scripts]
pygooglecloud = "pygooglecloud.main:main"

[tool.ruff]
line-length = 130

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pygooglecloud"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pygooglecloud/",
    "README.md",
    "LICENSE",
    "pyproject.toml"
]
exclude = [
    ".gitignore",
    ".github/",
    "tests/",
    "docs/",
    "config/",
    "*.md",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.hatch.envs.default]
installer = "uv"
